--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -14,4 +14,4 @@ jobs:
         python -m pip install --upgrade pip
         pip install pylint
     - name: Analysing the code with pylint
-      run: pylint $(git ls-files '*.py')
+      run: pylint --disable=W0621 --disable=C0103 $(git ls-files '*.py')
