--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -10,8 +10,6 @@ jobs:
     - name: Set up Python 3
       uses: actions/setup-python@v3
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pylint
+      run: pip install pylint
     - name: Analysing the code with pylint
       run: pylint --disable=W0621 --disable=C0103 $(git ls-files '*.py')
