--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -13,5 +13,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint
+        pip install -r requirements.txt
     - name: Analysing the code with pylint
       run: pylint --disable=W0621 --disable=C0103 $(git ls-files '*.py')
